syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.mystore.order.api;

service OrderService {
  option (kalix.codegen) = {
    event_sourced_entity : {
      name : "io.mystore.order.entity.Order"
      entity_type : "order"
      state : "io.mystore.order.entity.OrderState"
      events : [
        "io.mystore.order.entity.OrderCreated",
        "io.mystore.order.entity.OrderShipped",
        "io.mystore.order.entity.OrderReleased",
        "io.mystore.order.entity.OrderDelivered",
        "io.mystore.order.entity.OrderReturned",
        "io.mystore.order.entity.OrderCancelled",
        "io.mystore.order.entity.OrderItemShipped",
        "io.mystore.order.entity.OrderItemReleased" //
      ]
    }
  };

  rpc CreateOrder(CreateOrderCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/order/{order_id}/create"
      body : "*"
    };
  }

  rpc ShippedOrder(ShippedOrderCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/order/{order_id}/shipped-order"
      body : "*"
    };
  }

  rpc ReleasedOrder(ReleasedOrderCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/order/{order_id}/released-order"
      body : "*"
    };
  }

  rpc ShippedOrderItem(ShippedAllOrderSkusCommand)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/order/{order_id}/shipped-order-sku"
      body : "*"
    };
  }

  rpc ReleasedOrderItem(ReleasedOrderItemCommand)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/order/{order_id}/released-order-sku"
      body : "*"
    };
  }

  rpc DeliveredOrder(DeliveredOrderCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/order/{order_id}/delivered"
    };
  }

  rpc ReturnedOrder(ReturnedOrderCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/order/{order_id}/returned"
    };
  }

  rpc CanceledOrder(CanceledOrderCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/order/{order_id}/canceled"
    };
  }

  rpc GetOrder(GetOrderRequest) returns (Order) {
    option (google.api.http) = {
      get : "/order/{order_id}"
    };
  }
}

message CreateOrderCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  repeated OrderItem order_items = 4;
}

message ShippedOrderCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
  google.protobuf.Timestamp shipped_utc = 2;
}

message ReleasedOrderCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
}

message ShippedAllOrderSkusCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
  string sku_id = 2;
  google.protobuf.Timestamp shipped_utc = 3;
}

message ReleasedOrderItemCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
  string sku_id = 2;
}

message DeliveredOrderCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
}

message ReturnedOrderCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
}

message CanceledOrderCommand {
  string order_id = 1 [ (kalix.field).entity_key = true ];
}

message GetOrderRequest {
  string order_id = 1 [ (kalix.field).entity_key = true ];
}

message Order {
  string order_id = 1 [ (kalix.field).entity_key = true ];
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  google.protobuf.Timestamp delivered_utc = 5;
  google.protobuf.Timestamp returned_utc = 6;
  google.protobuf.Timestamp canceled_utc = 7;
  repeated OrderItem order_items = 8;
}

message OrderItem {
  string sku_id = 1;
  string sku_name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp shipped_utc = 4;
}
