syntax = "proto3";

package io.mystore.order.entity;

import "google/protobuf/timestamp.proto";

message OrderState {
  string order_id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  google.protobuf.Timestamp delivered_utc = 5;
  google.protobuf.Timestamp returned_utc = 6;
  google.protobuf.Timestamp canceled_utc = 7;
  repeated OrderItem order_items = 8;
}

message OrderItem {
  string sku_id = 1;
  string sku_name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp shipped_utc = 4;
}

message OrdereItem {
  string sku_id = 1;
  string sku_name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp shipped_utc = 4;
}

message OrderCreated {
  string order_id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  repeated OrderItem order_items = 4;
}

message OrderShipped {
  string order_id = 1;
  google.protobuf.Timestamp shipped_utc = 2;
}

message OrderReleased {
  string order_id = 1;
  google.protobuf.Timestamp shipped_utc = 2;
}

message OrderDelivered {
  string order_id = 1;
  google.protobuf.Timestamp delivered_utc = 2;
}

message OrderReturned {
  string order_id = 1;
  google.protobuf.Timestamp returned_utc = 2;
}

message OrderCancelled {
  string order_id = 1;
  google.protobuf.Timestamp canceled_utc = 2;
}

message OrderItemShipped {
  string order_id = 1;
  string sku_id = 2;
  google.protobuf.Timestamp shipped_utc = 3;
}

message OrderItemReleased {
  string order_id = 1;
  string sku_id = 2;
  google.protobuf.Timestamp shipped_utc = 3;
}
